<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_transfer"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/destination_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/dest_sofia_bansko_choice"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/dest_sofia_bansko_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sofia -> Bansko" />

            <RadioButton
                android:id="@+id/dest_bansko_sofia_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bansko -> Sofia" />

            <RadioButton
                android:id="@+id/dest_plovdiv_bansko_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Plovdiv -> Bansko" />

            <RadioButton
                android:id="@+id/dest_bansko_plovdiv_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bansko -> Plovdiv" />

            <RadioButton
                android:id="@+id/dest_thessaloniki_bansko_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Thessaloniki -> Bansko" />

            <RadioButton
                android:id="@+id/dest_bansko_thessaloniki_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bansko -> Thessaloniki" />

            <RadioButton
                android:id="@+id/dest_different_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Different Route" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/return_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:text="@string/return_transfer" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/mpv_choice"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/mpv_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/mpv_car" />

            <RadioButton
                android:id="@+id/minibus_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mini_bus" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total_amount"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_amount_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/payment_info"
            android:textSize="12sp" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checkedButton="@+id/arrival_choice"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/arrival_choice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/arrival" />

            <RadioButton
                android:id="@+id/departure_choice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/departure" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/flight_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:ems="10"
                android:hint="@string/flight" />

            <EditText
                android:id="@+id/date_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:editable="false"
                android:ems="10"
                android:hint="@string/date" />

            <EditText
                android:id="@+id/time_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:editable="false"
                android:ems="10"
                android:hint="@string/time" />

            <ImageView
                android:id="@+id/clear_date"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passengers_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:ems="10"
                android:hint="@string/number_of_passengers"
                android:inputType="number" />

            <EditText
                android:id="@+id/child_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:ems="10"
                android:hint="@string/child_seats"
                android:inputType="number" />

        </LinearLayout>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_name" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_e_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/hotel_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_hotel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/comments_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:lines="4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/attention"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>